--- a/excercise6/WebClinicalRecords/templates/home.html
+++ b/excercise6/WebClinicalRecords/templates/home.html
@@ -1,4 +1,7 @@
 {{template "base.html" .}}
+{{define "header"}}
+<title>{{.title}}</title>
+{{end}}
 {{define "content"}}
 <h1>Home</h1>
 <p>This is the content of the Home</p>
